Fixed a copy-paste error in the CSS for the 'Resume' and 'Socials' pages that broke the gaps between the tiles.

--- a/src/app/resume/page.module.css
+++ b/src/app/resume/page.module.css
@@ -21,7 +21,7 @@
 /* If you're using a mouse, the gaps between the tiles will be smaller since I */
 /* think it looks beter. */
 @media only screen and (pointer: fine) {
-    .HomeGrid {
+    .ResumeGrid {
         gap: 1em;
     }
 }
